# amazon-q-pygame

./: .gitIgnore  LICENSE  Makefile  README.md  config.json  main.py  pyproject.toml  test_game.py
.github/workflows/: ci.yml
src/: __init__.py  achievements.py  constants.py  game.py  logger.py  menu.py  particles.py  performance.py  platform.py  player.py  powerup.py  settings.py  sound_manager.py
